@@ -40,6 +40,10 @@ v0.6 "Bilbo" (??-??-2016)
 -------------------------
 [+] Capacidad de obtener y almacenar la información de la
 cuenta del usuario, incluido el Avatar.
+[+] Pequeño panel con datos del usuario. A la izquierda en la
+pantalla principal.
+[+] Pantalla que muestra información relacionada con el usuario
+como estados, seguidores, seguidos, grupos, url, etc.
 
 -------------------------
 -------------------------
